--- a/src/app/portfolio/stock-selector/stock-selector.component.html
+++ b/src/app/portfolio/stock-selector/stock-selector.component.html
@@ -2,10 +2,10 @@
   <div class="selector-title">
     <h2>Stock Selector</h2>
   </div>
-  <mat-select class="selector">
-    <mat-option value="option1">Option 1</mat-option>
-    <mat-option value="option2">Option 2</mat-option>
-    <mat-option value="option3">Option 3</mat-option>
-  </mat-select>
+  <mat-form-field>
+    <mat-select placeholder="Toppings" [formControl]="toppings" multiple>
+      <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+    </mat-select>
+  </mat-form-field>
   <div class="notofication"></div>
 </div>
