--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
 <div class="page-container">
-  <dl-my-portfolio class="my-portfolio-container"></dl-my-portfolio>
-  <dl-stock-selector class="selector-container"></dl-stock-selector>
+  <dl-my-portfolio class="my-portfolio-container border"></dl-my-portfolio>
+  <dl-stock-selector class="selector-container border"></dl-stock-selector>
 </div>
