--- a/src/app/portfolio/stock-selector/stock-selector.component.html
+++ b/src/app/portfolio/stock-selector/stock-selector.component.html
@@ -1,4 +1,4 @@
-<div class="stock-selector border">
+<div class="stock-selector">
   <div class="selector-title">
     <h2>Stock Selector</h2>
   </div>
