--- a/src/app/portfolio/stock-selector/stock-selector.component.html
+++ b/src/app/portfolio/stock-selector/stock-selector.component.html
@@ -3,9 +3,9 @@
     <h2>Stock Selector</h2>
   </div>
   <mat-form-field>
-    <mat-select placeholder="Toppings" [formControl]="toppings" multiple>
-      <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+    <mat-select placeholder="Select Stock..." [formControl]="stockControl" multiple>
+      <mat-option *ngFor="let item of stockItems | orderBy: 'name'" [value]="item.name">{{item.name}}</mat-option>
     </mat-select>
   </mat-form-field>
-  <div class="notofication"></div>
+  <div class="notification"></div>
 </div>
